@@ -4,12 +4,14 @@
 \alias{GNRS}
 \title{Standardize political division names}
 \usage{
-GNRS(political_division_dataframe, batches = NULL)
+GNRS(political_division_dataframe, batches = NULL, ...)
 }
 \arguments{
 \item{political_division_dataframe}{A properly formatted dataframe, see http://bien.nceas.ucsb.edu/bien/tools/gnrs/gnrs-api/}
 
 \item{batches}{NULL or Numeric.  Optional number of batches to divide the request into for parallel processing.}
+
+\item{...}{Additional parameters passed to internal functions}
 }
 \value{
 Dataframe containing GNRS results.
