@@ -1,0 +1,26 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/gnrs_core.R
+\name{gnrs_core}
+\alias{gnrs_core}
+\title{Handle API access and format}
+\usage{
+gnrs_core(
+  url = "https://gnrsapi.xyz/gnrs_api.php",
+  mode,
+  data_json = NULL,
+  batches = NULL
+)
+}
+\arguments{
+\item{url}{Server URL to use.  Defaults to the stable production version}
+
+\item{mode}{API mode to use.  One of "collaborators",}
+
+\item{data_json}{Either NULL (the default) or properly formatted json}
+
+\item{batches}{NULL or Numeric.  Optional number of batches to divide the request into for parallel processing.}
+}
+\description{
+Internal function for handling accessing the API,data formatting, and errors
+}
+\keyword{internal}
